--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# Database properties
 
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto = validate
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasourse.username=vit
+spring.dtasourse.password=password
+spring.datasourse.url=jdbc:mysql://localhost:3306/tutor?autoreconnect=true
+
+# FlyWay properties
+spring.flyway.locations=filesystem:db/migration
+spring.flyway.url=jdbc:mysql://localhost:3306/tutor
+spring.flyway.schemas = tutor
+spring.flyway.user = vit
+spring.flyway.password = password
